# Lyre

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  Dockerfile  MEMORY.md  PRODUCT.md  README.md  flake.nix
.github/workflows/: ci.yml  docker.yml  hestia-gc.yml  vercel.yml
crates/lyre-app/: Cargo.toml
crates/lyre-app/src/: cli.rs  main.rs
crates/lyre-app/src/cli/: config.rs  deepfilternet.rs  ice.rs  serve.rs
crates/lyre-app/src/cli/serve/: tests.rs
crates/lyre-app/src/cli/serve/tests/: bind.rs  cors.rs  deepfilternet.rs  ice.rs  server_media.rs  state.rs  turn.rs
crates/lyre-core/: Cargo.toml
crates/lyre-core/src/: ids.rs  lib.rs  media.rs  media_runtime.rs  media_tests.rs  noise.rs  room.rs  room_aggregate_tests.rs  room_persistence.rs  webrtc.rs
crates/lyre-noise-cancelling/: Cargo.toml
crates/lyre-noise-cancelling/src/: deepfilternet.rs  dpdfnet.rs  dsp.rs  lib.rs  rnnoise.rs  server.rs  tests.rs
crates/lyre-noise-cancelling/src/deepfilternet/: session_io.rs
crates/lyre-noise-cancelling/src/dpdfnet/: resampler.rs  streaming.rs
crates/lyre-noise-cancelling/src/dsp/: deepfilternet.rs  dpdfnet.rs
crates/lyre-noise-cancelling/src/tests/: deepfilternet.rs
crates/lyre-noise-wasm/: Cargo.toml
crates/lyre-noise-wasm/src/: deepfilternet.rs  dpdfnet.rs  lib.rs  rnnoise.rs
crates/lyre-turn/: Cargo.toml
crates/lyre-turn/src/: lib.rs
crates/lyre-web/: Cargo.toml
crates/lyre-web/src/: api.rs  api_media_broadcast_tests.rs  api_media_tests.rs  api_server_media.rs  api_server_media_close_tests.rs  api_server_media_state.rs  api_server_media_tests.rs  api_tests.rs  api_webrtc_session_tests.rs  app_state.rs  error.rs  lib.rs  media_egress.rs  media_egress_tests.rs  media_runtime.rs  metrics.rs  metrics_tests.rs  processed_audio_webrtc_egress_pump.rs  processed_audio_webrtc_egress_pump_tests.rs  profile.rs  raw_opus_webrtc_egress_pump.rs  server.rs  server_media_ice_diagnostics.rs  server_media_runtime.rs  server_media_runtime_pump.rs  server_media_runtime_pump_tests.rs  server_media_runtime_tests.rs  signalling.rs  signalling_tests.rs  state_persistence.rs  state_persistence_tests.rs  websocket_disconnect_tests.rs  websocket_server_media_candidates_tests.rs
crates/lyre-web/src/webrpc/: convert.rs  dto.rs  error.rs  handlers.rs  mod.rs
crates/lyre-web/src/webrpc_tests/: errors.rs  media_relay.rs  mod.rs  rooms.rs  server_media.rs
crates/lyre-webrtc/: Cargo.toml
crates/lyre-webrtc/src/: connection_state.rs  egress.rs  jitter_buffer.rs  lib.rs  libopus.rs  media_ingress.rs  negotiation.rs  negotiation_tests.rs  opus_decode.rs  payload_dump.rs  pcm_concealment.rs  session.rs  stack.rs  stack_audio_ingress.rs  stack_egress_tests.rs  stack_jitter_buffer_tests.rs  stack_media_tests.rs  stack_pcm_plc_tests.rs  stack_tests.rs  test_support.rs
docs/: api-contracts.md  deployment.md  development.md  getting-started.md  media-architecture.md  roadmap.md  runtime-configuration.md
docs/superpowers/plans/: 2026-06-14-ice-server-config.md  2026-06-14-lyre-voip-mvp.md  2026-06-14-media-topology-boundary.md  2026-06-14-noise-settings-controls.md  2026-06-14-turn-rest-credentials.md  2026-06-14-webrpc-contract.md  2026-06-15-deepfilternet-dsp-runtime.md  2026-06-15-deepfilternet-runtime-config.md  2026-06-15-embedded-turn-service.md  2026-06-15-frontend-server-media-playback.md  2026-06-15-media-relay-skeleton.md  2026-06-15-mesh-audio-negotiation.md  2026-06-15-noise-provider-runtime.md  2026-06-15-opus-rtp-to-media-runtime.md  2026-06-15-per-user-server-media-cleanup.md  2026-06-15-processed-audio-broadcast-contract.md  2026-06-15-processed-audio-egress-fanout.md  2026-06-15-processed-audio-webrtc-egress.md  2026-06-15-production-metrics.md  2026-06-15-rnnoise-opus-frame-alignment.md  2026-06-15-room-access-token.md  2026-06-15-room-state-persistence.md  2026-06-15-server-audio-rtp-ingress.md  2026-06-15-server-media-ice-candidates.md  2026-06-15-server-media-jitter-buffer.md  2026-06-15-server-media-negotiation.md  2026-06-15-server-media-pcm-plc.md  2026-06-15-server-media-runtime-boundary.md  2026-06-15-server-media-runtime-pump.md  2026-06-15-web-media-runtime-wiring.md  2026-06-15-webrpc-rust-runtime.md  2026-06-15-webrtc-session-boundary.md  2026-06-16-auto-audio-reconnect-mute.md  2026-06-16-per-user-audio-controls.md  2026-06-16-server-media-candidates-websocket.md  2026-06-16-websocket-disconnect-room-leave.md  2026-06-17-audio-device-selection.md  2026-06-17-client-rms-vad-dtx.md  2026-06-17-raw-opus-replay-flood-fix.md  2026-06-22-listen-only-no-microphone.md  (+3 more)
docs/superpowers/specs/: 2026-06-14-ice-server-config-design.md  2026-06-14-lyre-voip-mvp-design.md  2026-06-14-media-topology-boundary-design.md  2026-06-14-noise-settings-controls-design.md  2026-06-14-turn-rest-credentials-design.md  2026-06-14-webrpc-contract-design.md  2026-06-15-deepfilternet-dsp-runtime-design.md  2026-06-15-deepfilternet-runtime-config-design.md  2026-06-15-embedded-turn-service-design.md  2026-06-15-frontend-server-media-playback-design.md  2026-06-15-media-relay-skeleton-design.md  2026-06-15-mesh-audio-negotiation-design.md  2026-06-15-noise-provider-runtime-design.md  2026-06-15-opus-rtp-to-media-runtime-design.md  2026-06-15-per-user-server-media-cleanup-design.md  2026-06-15-processed-audio-broadcast-contract-design.md  2026-06-15-processed-audio-egress-fanout-design.md  2026-06-15-processed-audio-webrtc-egress-design.md  2026-06-15-production-metrics-design.md  2026-06-15-rnnoise-opus-frame-alignment-design.md  2026-06-15-room-access-token-design.md  2026-06-15-room-state-persistence-design.md  2026-06-15-server-audio-rtp-ingress-design.md  2026-06-15-server-media-ice-candidates-design.md  2026-06-15-server-media-jitter-buffer-design.md  (+18 more)
frontend/: eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/messages/: en-US.json  zh-CN.json
frontend/scripts/: build-noise-wasm.mjs  copy-ort-assets.mjs
nix/modules/: lyre.nix
proto/: lyre.ridl
scripts/kubernetes/: Chart.yaml  README.md  deploy.sh  values.yaml
(+64 files in other folders)
