[workspace]
members = [
    "crates/lyre-app",
    "crates/lyre-core",
    "crates/lyre-noise-cancelling",
    "crates/lyre-turn",
    "crates/lyre-webrtc",
    "crates/lyre-web",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dashmap = "6"
deep_filter = { version = "0.2.5", default-features = false }
futures-util = "0.3"
hmac = "0.12"
http-body-util = "0.1"
nnnoiseless = { version = "0.5.2", default-features = false }
opus-rs = "0.1.22"
rand = "0.9"
rtc = "0.20.0-alpha.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync"] }
tokio-util = "0.7"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
turn-server = { version = "4.1.2", default-features = false, features = ["udp"] }
ulid = "1"
webrtc = "0.20.0-alpha.1"
