[package]
name = "lyre-app"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "lyre"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
lyre-core = { path = "../lyre-core" }
lyre-noise-cancelling = { path = "../lyre-noise-cancelling" }
lyre-turn = { path = "../lyre-turn" }
lyre-web = { path = "../lyre-web" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
