[package]
name = "lyre-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
dashmap.workspace = true
hmac.workspace = true
serde.workspace = true
sha1.workspace = true
thiserror.workspace = true
ulid.workspace = true

[dev-dependencies]
serde_json.workspace = true
