[package]
name = "lyre-noise-cancelling"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
deep_filter.workspace = true
lyre-core = { path = "../lyre-core" }
nnnoiseless.workspace = true
ort.workspace = true
rustfft.workspace = true
thiserror.workspace = true
tracing.workspace = true
