[package]
name = "lyre-noise-cancelling"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["server"]
dsp = ["deep_filter", "rustfft"]
server = ["dsp", "lyre-core", "ort", "rubato", "tracing"]

[dependencies]
deep_filter = { workspace = true, optional = true }
lyre-core = { path = "../lyre-core", optional = true }
nnnoiseless.workspace = true
ort = { workspace = true, optional = true }
rubato = { workspace = true, optional = true }
rustfft = { workspace = true, optional = true }
thiserror.workspace = true
tracing = { workspace = true, optional = true }
