[package]
name = "lyre-web"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
dashmap.workspace = true
futures-util.workspace = true
lyre-core = { path = "../lyre-core" }
lyre-noise-cancelling = { path = "../lyre-noise-cancelling" }
lyre-turn = { path = "../lyre-turn" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
chrono.workspace = true
http-body-util.workspace = true
tower.workspace = true
