[package]
name = "lyre-web"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures-util.workspace = true
lyre-core = { path = "../lyre-core" }
lyre-noise-cancelling = { path = "../lyre-noise-cancelling" }
lyre-turn = { path = "../lyre-turn" }
lyre-webrtc = { path = "../lyre-webrtc" }
pprof.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true

[dev-dependencies]
http-body-util.workspace = true
lyre-webrtc = { path = "../lyre-webrtc", features = ["test-support"] }
tower.workspace = true
tracing-subscriber.workspace = true
