[package]
name = "lyre-webrtc"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
dashmap.workspace = true
lyre-core = { path = "../lyre-core" }
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
webrtc.workspace = true
