[package]
name = "lyre-webrtc"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
async-trait.workspace = true
bytes.workspace = true
dashmap.workspace = true
lyre-core = { path = "../lyre-core" }
rtc.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
webrtc.workspace = true
